Add Autismappar desktop category

--- a/se.danielnylander.energimataren.desktop
+++ b/se.danielnylander.energimataren.desktop
@@ -6,4 +6,4 @@ Comment[sv]=Visuell energimätare för barn
 Exec=energimataren
 Icon=se.danielnylander.energimataren
 Type=Application
-Categories=Education;Accessibility;
+Categories=Education;Accessibility;Autismappar
